gitops/applications/fibonacci/base/image.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
spec:
  template:
    spec:
      containers:
        - name: app
          image: registry.gitlab.com/connective-au/devops/application-images/fibonacci-service:main-latest
